feat: rename search routing path
