# backend/src/routes/search.route.js
@@ -2,12 +2,12 @@
 module.exports = (app) => {
   const { checkSchema } = require('express-validator')
   const validator = require('../middleware/validator')
-  const { AnimalList } = require('./validation/search.schema')
+  const { Animals } = require('./validation/search.schema')
   const SearchController = require("../controllers/search.controller")
 
-  app.get('/search/sidoList', SearchController.sidoList)
-  app.get('/search/sigunguList', SearchController.sigunguList)
-  app.get('/search/shelterList', SearchController.shelterList)
-  app.get('/search/kindList', SearchController.kindList)
-  app.get('/search/animalList', validator.validate(checkSchema(AnimalList)), SearchController.animalList)
+  app.get('/search/sido', SearchController.sido)
+  app.get('/search/sigungu', SearchController.sigungu)
+  app.get('/search/shelter', SearchController.shelter)
+  app.get('/search/kind', SearchController.kind)
+  app.get('/search/animals', validator.validate(checkSchema(Animals)), SearchController.animals)
 }
